shaku_derive/tests/ui/derive_enum.stderr
error: Only structs are currently supported
  --> $DIR/derive_enum.rs:10:6
   |
10 | enum ComponentImpl {
   |      ^^^^^^^^^^^^^

error: Only structs are currently supported
  --> $DIR/derive_enum.rs:17:6
   |
17 | enum ProviderImpl {
   |      ^^^^^^^^^^^^
